final hero fix
